--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
+    "nodemailer": "^6.4.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
